--- a/Project.html
+++ b/Project.html
@@ -205,7 +205,7 @@ confRF</code></pre>
 </div>
 <div id="conclusions" class="section level2">
 <h2>Conclusions</h2>
-<p>Compared predictions with the cross-validation set, the accuracy of the Decision-Tree and Random-Forests models is 0.739 and 0.993, respectively. Therefore, the Random Forests model is selected to the 20 test cases available in the test data.</p>
+<p>Compared predictions with the cross-validation set, the accuracy of the Decision-Tree and Random-Forests models is 0.739 and 0.993, respectively. Therefore, the Random Forests model is selected to the 20 test cases available in the testing set.</p>
 </div>
 <div id="applying-selected-model-to-test-set" class="section level2">
 <h2>Applying Selected Model to Test Set</h2>
