add out of sample error

--- a/Project.html
+++ b/Project.html
@@ -163,6 +163,7 @@ confDT </code></pre>
 ## Detection Rate         0.2524   0.1099   0.1384   0.1049   0.1337
 ## Detection Prevalence   0.2952   0.1538   0.2140   0.1522   0.1848
 ## Balanced Accuracy      0.9136   0.7567   0.8512   0.7917   0.8324</code></pre>
+<p>For the Decision-Tree model, the out of sample error (ie <code>1 - accuracy</code> for predictions made against the cross-validation set) is 26.1%.</p>
 </div>
 <div id="random-forests-evaluatation" class="section level4">
 <h4>2 Random Forests: Evaluatation</h4>
@@ -200,6 +201,7 @@ confRF</code></pre>
 ## Detection Rate         0.2845   0.1916   0.1726   0.1611   0.1833
 ## Detection Prevalence   0.2858   0.1931   0.1760   0.1616   0.1835
 ## Balanced Accuracy      0.9991   0.9941   0.9928   0.9911   0.9985</code></pre>
+<p>For the Random-Forests model, the out of sample error (ie <code>1 - accuracy</code> for predictions made against the cross-validation set) is 0.701%.</p>
 </div>
 </div>
 </div>
